# smalti

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  README_kor.md  build.sh  design.pen  forge.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.main.config.ts  vite.preload.config.ts  vitest.config.ts
.claude/agents/: devils-advocate.md
.claude/commands/: wrap.md
.github/workflows/: ci.yml  release.yml
_workspace/: 00_input.md  01_brand_strategy.md  02_naming_candidates.md  04_visual_identity.md
crates/aide-core/: Cargo.toml
crates/aide-napi/: Cargo.toml
crates/smalti-core/: Cargo.toml
crates/smalti-napi/: Cargo.toml
crates/smalti-napi/src/: lib.rs
docs/: CLAUDE.md  HARNESS_INSTRUCTION.md  PRD.md  README.ko.md  README.md  TRD.md  UI-SPEC.md
docs/.obsidian/: workspace.json
docs/archive/: file-tree-lazy-load-hotfix.md
docs/brand/: 03_verbal_identity.md  05_review_report.md  06_namespace_audit.md
docs/design/: design.pen
docs/ideation/: command-preset-palette.md  rebrand-partide.md  rebrand-smalti.md  rebrand-wnide.md  rust-core-migration.md
docs/raw/: nerd-fonts-terminal-rendering.md
docs/release/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md
docs/spec/: PRD.md  TRD.md  UI-SPEC.md
docs/wiki/: app-settings-persistence.md  eperm-uv-cwd-bugfix.md  index.md  log.md  macos-tcc-file-permissions.md  main-process-cpu-home-watcher-bugfix.md  mcp-server-sandbox-duplication.md  plugin-scope-local-only.md  pnpm11-settings-location.md  (+6 more)
resources/: icon.icns
scripts/: build-native.mjs
(+171 files in other folders)
